--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,32 @@
-.App {
-  text-align: center;
+
+
+/**** NAVBAR *****/
+
+.apple {
+  background-color: #850808;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.menu-links {
+  color: #00a900;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+
+/**** HOME PAGE *****/
+
+.jumbotron {
+  margin: 0;
+  padding: 30px;
+  /* background-image: url("https://cdn.wallpapersafari.com/61/31/9NCh6J.jpg"); */
+  background-image: url("https://cdn.wallpapersafari.com/61/31/9NCh6J.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
+/* .card-img {
+  width: 30%;
+} */
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#fishie-img {
+  width: 20%;
 }
